2003-11-05  Tor Lillqvist  <tml@iki.fi>
	* libgimpbase/Makefile.am: Move gimpwin32-io.h to
	libgimpbase_1_3_la_SOURCES, so that it gets distributed.

	* libgimpmodule/Makefile.am: Remove empty and meaningless
	EXTRA_HEADERS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11284 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpbase/Makefile.am
+++ b/libgimpbase/Makefile.am
@@ -86,6 +86,7 @@ libgimpbase_1_3_la_SOURCES = \
 	gimpsignal.h            \
 	gimputils.c            	\
 	gimputils.h            	\
+	gimpwin32-io.h		\
 	gimpwire.c		\
 	gimpwire.h
 
@@ -102,8 +103,6 @@ libgimpbaseinclude_HEADERS = \
 	gimpparasite.h		\
 	gimpparasiteio.h	\
 	gimpsignal.h
-
-EXTRA_HEADERS = gimpwin32-io.h
 
 libgimpbase_1_3_la_LDFLAGS = \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)	\
