2003-11-10  Sven Neumann  <sven@gimp.org>
	* app/display/Makefile.am
	* app/display/display-types.h
	* app/display/gimpcanvas.[ch]: added GimpCanvas, derived from
	GtkDrawingArea.

	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell-render.c
	* app/display/gimpdisplayshell.[ch]


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11350 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/display/Makefile.am
+++ b/app/display/Makefile.am
@@ -16,6 +16,8 @@ noinst_LIBRARIES = libappdisplay.a
 libappdisplay_a_sources = \
 	display-enums.h				\
 	display-types.h				\
+	gimpcanvas.c				\
+	gimpcanvas.h				\
 	gimpdisplay.c				\
 	gimpdisplay.h				\
 	gimpdisplayoptions.c			\
