2003-11-11  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/Makefile.am
	* plug-ins/common/mkgen.pl
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/dicom.c: added DICOM file plug-in written by
	Dov Grobgeld.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11374 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -54,6 +54,7 @@ libexec_PROGRAMS = \
 	depthmerge \
 	despeckle \
 	destripe \
+	dicom \
 	diffraction \
 	displace \
 	edge \
@@ -552,6 +553,18 @@ destripe_SOURCES = \
 	destripe.c
 
 destripe_LDADD = \
+	$(top_builddir)/libgimp/libgimpui-$(LT_RELEASE).la		\
+	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
+	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
+	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
+	@GTK_LIBS@							\
+	@INTLLIBS@
+
+dicom_SOURCES = \
+	dicom.c
+
+dicom_LDADD = \
 	$(top_builddir)/libgimp/libgimpui-$(LT_RELEASE).la		\
 	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
