2003-11-11  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpstock.[ch]
	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-move-to-screen-[16|24].png: added
	new icon drawn by Jimmac.

	* app/gui/dialogs-menu.c
	* app/gui/image-menu.c: use the new icon.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11381 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/themes/Default/images/Makefile.am
+++ b/themes/Default/images/Makefile.am
@@ -74,6 +74,7 @@ STOCK_MENU_IMAGES = \
 	stock-menu-left-12.png				\
 	stock-menu-right-12.png				\
 	stock-merge-down-16.png				\
+	stock-move-to-screen-16.png			\
 	stock-navigation-16.png				\
 	stock-path-16.png				\
 	stock-paths-16.png				\
@@ -147,6 +148,7 @@ STOCK_BUTTON_IMAGES = \
 	stock-line-spacing-22.png		\
 	stock-linked-12.png			\
 	stock-linked-20.png			\
+	stock-move-to-screen-24.png		\
 	stock-paste-as-new-16.png		\
 	stock-paste-into-16.png			\
 	stock-path-stroke-16.png		\
