Moved code from gfig.c to 2 new files.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11387 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gfig/Makefile.am
+++ b/plug-ins/gfig/Makefile.am
@@ -25,10 +25,14 @@ gfig_SOURCES = \
 	gfig-dobject.h	\
 	gfig-ellipse.c	\
 	gfig-ellipse.h	\
+	gfig-grid.c	\
+	gfig-grid.h	\
 	gfig-line.c	\
 	gfig-line.h	\
 	gfig-poly.c	\
 	gfig-poly.h	\
+	gfig-preview.c	\
+	gfig-preview.h	\
 	gfig-spiral.c	\
 	gfig-spiral.h	\
 	gfig-star.c	\
