--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -157,7 +157,9 @@ plug-ins/fp/fp_gtk.c
 plug-ins/gfig/gfig.c
 plug-ins/gfig/gfig-bezier.c
 plug-ins/gfig/gfig-dobject.c
+plug-ins/gfig/gfig-grid.c
 plug-ins/gfig/gfig-poly.c
+plug-ins/gfig/gfig-preview.c
 plug-ins/gfig/gfig-spiral.c
 plug-ins/gfig/gfig-star.c
 plug-ins/gflare/gflare.c
