2003-11-13  Sven Neumann  <sven@gimp.org>
	* app/app_procs.[ch]
	* app/main.c
	* app/core/gimp.[ch]
	* app/gui/gui.c
	* app/gui/session.[ch]: allow to pass a session name on the
	command-line. This causes a different sessionrc to be used. This
	is a bit hackish but our power users will probably love it.
	Also removed the useless --restore-session command-line option.

	* docs/gimp-1.3.1.in: changed accordingly.

	* app/core/gimpmarshal.list: removed obsolete marshaller.

	* app/config/gimprc.c (gimp_rc_new): improved gtk-doc comment.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11409 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimp-1.3.1.in
+++ b/docs/gimp-1.3.1.in
@@ -1,4 +1,4 @@
-.TH GIMP 1 "5 November 2003" "Version @GIMP_VERSION@" "GIMP Manual Pages"
+.TH GIMP 1 "13 November 2003" "Version @GIMP_VERSION@" "GIMP Manual Pages"
 .SH NAME
 gimp - an image manipulation and paint program.
 .SH SYNOPSIS
@@ -6,7 +6,7 @@ gimp - an image manipulation and paint program.
 [\-h] [\-\-help] [-v] [\-\-version] [\-\-verbose] [\-\-no\-shm]
 [\-\-no\-mmx] [\-\-display \fIdisplay\fP] [\-d] [\-\-no\-data]
 [\-f] [\-\-no\-fonts] [\-i] [\-\-no\-interface] [\-s] [\-\-no\-splash]
-[\-S] [\-\-no\-splash\-image] [\-r] [\-\-restore\-session]
+[\-S] [\-\-no\-splash\-image] [\-\-session \fI<name>\fP]
 [\-g] [\-\-gimprc \fI<gimprc>\fP] [\-\-system\-gimprc \fI<gimprc>\fP]
 [\-\-dump\-gimprc\fP] [\-\-console\-messages] [\-\-debug\-handlers]
 [\-b] [\-\-batch \fI<commands>\fP]
@@ -73,8 +73,9 @@ Do not show the splash screen.
 .B \-S, \-\-no\-splash\-image
 Do not show the splash screen image as part of the splash screen.
 .TP 8
-.B \-r, \-\-restore\-session
-Try to restore saved session.
+.B \-\-session \fI<name>\fP
+Use a different sessionrc for this GIMP session. The given session
+name is appended to the default sessionrc filename.
 .TP 8
 .B \-g, \-\-gimprc \fI<gimprc>\fP
 Use an alternative gimprc instead of the default one. Useful in
