2003-11-15  Sven Neumann  <sven@gimp.org>
	* configure.in
	* app/Makefile.am: moved the definition of the symbol prefix to
	the configure script. Set it to '_' for MacOS X and Win32.

	* libgimpwidgets/gimpwidgets.[ch]: removed the deprecation guards
	again. It doesn't make sense to deprecate these function now.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11439 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -578,6 +578,32 @@ if test "x$shmtype" = "xsysv"; then
 fi
 
 
+########################
+# Define a symbol prefix
+########################
+
+AC_MSG_CHECKING([whether symbols are prefixed])
+
+case "$target_or_host" in
+  *-*-mingw*)
+    SYMPREFIX='_'
+    ;;
+  darwin* | rhapsody* | machten*)
+    SYMPREFIX='_'
+    ;;
+  *)
+    ;;
+esac
+
+if test -n "$SYMPREFIX"; then
+  AC_MSG_RESULT([yes, with a $SYMPREFIX])
+else
+  AC_MSG_RESULT(no)
+fi
+
+AC_SUBST(SYMPREFIX)
+
+
 ##################################
 # Check for regex support in glibc
 ##################################
