forgot this file with my last commit
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11441 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -51,14 +51,13 @@ endif
 
 if OS_WIN32
 mwindows = -mwindows
-symprefix = _
 endif
 
 gimp_1_3_LDFLAGS = \
 	$(mwindows)				\
-	-u $(symprefix)gimp_container_filter	\
-	-u $(symprefix)gimp_xml_parser_new	\
-	-u $(symprefix)gimp_drawable_stroke_vectors
+	-u $(SYMPREFIX)gimp_container_filter	\
+	-u $(SYMPREFIX)gimp_xml_parser_new	\
+	-u $(SYMPREFIX)gimp_drawable_stroke_vectors
 
 AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Gimp\"		\
