2003-11-15  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimpexport.[ch]: added new export capabilities
	GIMP_EXPORT_CAN_HANDLE_BITMAP and _CAN_HANDLE_LAYER_MASKS and
	export the image accordingly. Code cleanup.

	* plug-ins/common/xbm.c (run): replaced _CAN_HANDLE_INDEXED by
	_CAN_HANDLE_BITMAP. Fixes bug #65788.

	* plug-ins/common/psd_save.c (run): added export stuff so
	layer masks are applied before saving. Fixes bug #119732.

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl: link psd_save against GTK+
	and libgimpui.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11455 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -1268,10 +1268,12 @@ psd_save_SOURCES = \
 	psd_save.c
 
 psd_save_LDADD = \
+	$(top_builddir)/libgimp/libgimpui-$(LT_RELEASE).la		\
+	$(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimp/libgimp-$(LT_RELEASE).la		\
 	$(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la	\
 	$(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la	\
-	@GLIB_LIBS@							\
+	@GTK_LIBS@							\
 	@INTLLIBS@
 
 psp_SOURCES = \
