2003-11-16  Michael Natterer  <mitch@gimp.org>
	* libgimp/Makefile.am: ignore "gimpunitcache.h".

	* libgimpbase/Makefile.am: ignore "gimpbase-private.h".

	* libgimpbase/tmpl/gimpunit.sgml: removed docs because the
	gimpunit.c file is in the right place to be parsed correctly now.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11464 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/libgimpbase/Makefile.am
+++ b/devel-docs/libgimpbase/Makefile.am
@@ -27,7 +27,8 @@ CFILE_GLOB = $(DOC_SOURCE_DIR)/*.c
 
 # Header files to ignore when scanning
 IGNORE_HFILES = \
-	gimpbase.h	\
+	gimpbase.h		\
+	gimpbase-private.h	\
 	gimpwin32-io.h
 
 # Images to copy into HTML directory
