--- a/devel-docs/libgimp/Makefile.am
+++ b/devel-docs/libgimp/Makefile.am
@@ -30,6 +30,7 @@ IGNORE_HFILES = \
 	gimpcompat.h		\
 	gimpmisc.h		\
 	gimpmiscui.h		\
+	gimpunitcache.h		\
 	gimpintl.h 		\
 	libgimp-intl.h		\
 	stdplugins-intl.h
