2003-11-16  Danilo Å egan  <dsegan@gmx.net>
	* po-libgimp/sr.po, po-libgimp/sr@Latn.po: Updated Serbian
	translation.

	* po-libgimp/POTFILES.in: gimpunit.c renamed to gimpunitcache.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11467 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/POTFILES.in
+++ b/po-libgimp/POTFILES.in
@@ -8,7 +8,7 @@ libgimp/gimpgradientmenu.c
 libgimp/gimpmenu.c
 libgimp/gimpmiscui.c
 libgimp/gimppatternmenu.c
-libgimp/gimpunit.c
+libgimp/gimpunitcache.c
 
 libgimpbase/gimputils.c
 
