2003-11-16  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am (libgimpwidgets_1_3_la_LIBADD): added
	libgimpbase since libgimpwidgets now depends on it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11472 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpwidgets/Makefile.am
+++ b/libgimpwidgets/Makefile.am
@@ -159,7 +159,11 @@ libgimpwidgets_1_3_la_LDFLAGS = \
 	$(no_undefined) \
 	$(libgimpwidgets_export_symbols)
 
-libgimpwidgets_1_3_la_LIBADD = $(libgimpcolor) $(GTK_LIBS) $(libm)
+libgimpwidgets_1_3_la_LIBADD = \
+	$(libgimpbase)	\
+	$(libgimpcolor) \
+	$(GTK_LIBS) 	\
+	$(libm)
 
 libgimpwidgets_1_3_la_DEPENDENCIES = $(gimpwidgets_def)
 
