2003-11-16  Michael Natterer  <mitch@gimp.org>
	* configure.in
	* themes/Makefile.am
	* themes/Small/.cvsignore
	* themes/Small/Makefile.am
	* themes/Small/gtkrc: added a "Small" theme so users don't have to
	edit their ~/.gimp-1.3/gtkrc to get the smaller look.

	* app/widgets/gimpdock.c: use "gimp-dock-separator", not just
	"dock-separator" as widget name.

	* etc/gtkrc: changed accordingly. Removed small style since it is
	a theme now. Cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11476 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1438,6 +1438,7 @@ themes/Makefile
 themes/Default/Makefile
 themes/Default/images/Makefile
 themes/Default/images/preferences/Makefile
+themes/Small/Makefile
 data/Makefile
 data/environ/Makefile
 data/misc/Makefile
